# structure-embedding

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/structure_embedding/: __init__.py  data.py  model.py  plot.py  transformer.py  utils.py
src/structure_embedding/models/: __init__.py  umap.py
src/structure_embedding/transformers/: __init__.py  umap.py
